...
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:id="@+id/nome_cognome_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/data_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp" />

                <TextView
                    android:id="@+id/tagTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15sp">

                <TextView
                    android:id="@+id/testoPostTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/link_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:clickable="false"
                    android:onClick="openLink"
                    android:textColor="#1976D2" />
...
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="10sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/commenti_numero_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:onClick="seeComments"
                        android:text="@string/Numero_commenti"
                        android:textStyle="bold" />
...
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/aggiungi_commento_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:drawableStart="@android:drawable/ic_menu_edit"
                        android:gravity="center_vertical"
                        android:onClick="addComment"
...
