<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_shape"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_comm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="3dp"
        android:layout_below="@+id/textTool"
        android:divider="@android:color/transparent"
        android:elevation="10dp"
        app:cardBackgroundColor="#CFF4F4"
        app:cardCornerRadius="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/nome_cognome_comm_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:textColor="@color/colorGeneralText"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/testo_comm_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/colorGeneralText" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/card_view_comm"
        android:layout_alignBottom="@+id/card_view_comm"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorAccent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_risposte"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/card_view_comm"
        android:layout_above="@+id/comment_section"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/comment_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:minHeight="70dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/writeRisposta"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="#00000000"
            android:focusable="true"
            android:layout_marginStart="10dp"
            android:focusableInTouchMode="true"
            android:gravity="center"

            android:hint="@string/scrivi_commento"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="#000000"
            android:textColorHint="#9F9C9C"
            android:textSize="14sp"

            android:windowSoftInputMode="adjustPan"
            android:isScrollContainer="true"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/send_risposta_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@android:color/transparent"
            android:rotation="180"
            android:focusable="true"
            android:tint="@color/colorTitle"
            app:srcCompat="@android:drawable/ic_menu_send"
            android:contentDescription="@string/desc_invio" />

    </LinearLayout>



        <TextView
            android:id="@+id/textTool"
            android:text="@string/risposte"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5sp"
            android:textColor="@color/colorGeneralText"
            android:textSize="14sp"
            android:textStyle="bold" />


    <ImageView
        android:id="@+id/back_to_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/desc_indietro" />



</RelativeLayout>