<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <EditText
        android:id="@+id/modifica_edittext"
        tools:ignore="Autofill,LabelFor"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:inputType="textImeMultiLine">

    </EditText>


</RelativeLayout>